--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="GALAPAGOS LUXURY CHARTERS"
+APP_NAME="Galapagos Luxury Charters"
 APP_ENV=local
 APP_KEY=base64:H4Bz7XHRVqT77sI910Xbb7fQdeLrUfaTBXe3xcl6A30=
 APP_DEBUG=true
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.56.56
+DB_HOST=192.168.10.10
 DB_PORT=3306
 DB_DATABASE=yacht_charters_glc
 DB_USERNAME=homestead
