--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwindcss": "^3.0.0"
     },
     "dependencies": {
-        "node-gyp": "^8.4.1"
+        "node-gyp": "^8.4.1",
+        "webpack": "^5.68.0"
     }
 }
