--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
         "alpinejs": "^3.0.6",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
-        "resolve-url-loader": "^5.0.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "tailwindcss": "^3.0.0"
+        "tailwindcss": "^3.0.0",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "node-gyp": "^8.4.1",
+        "vue": "^3.2.31",
+        "vue-axios": "^3.4.1",
+        "vue-router": "^4.0.12",
         "webpack": "^5.68.0"
     }
 }
