--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="GALAPAGOS LUXURY CHARTERS"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VOXctwL1EjwInu8WP5E7eDsG6bLYHRwGL7DjAQqpC5Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,17 +8,17 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.56.56
 DB_PORT=3306
-DB_DATABASE=customer_yacht_charters_glc
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=yacht_charters_glc
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
